--- a/cactpot.html
+++ b/cactpot.html
@@ -1,10 +1,10 @@
 <html>
 
 <head>
-  <!-- <script src="http://code.jquery.com/jquery-2.1.3.min.js" type="text/javascript"></script> -->
-  <!-- <script src="http://underscorejs.org/underscore-min.js" type="text/javascript"></script> -->
-  <script src="./jquery-2.1.3.min.js" type="text/javascript"></script>
-  <script src="./underscore-min.js" type="text/javascript"></script>
+  <script src="http://code.jquery.com/jquery-2.1.3.min.js" type="text/javascript"></script>
+  <script src="http://underscorejs.org/underscore-min.js" type="text/javascript"></script>
+  <!-- <script src="./jquery-2.1.3.min.js" type="text/javascript"></script> -->
+  <!-- <script src="./underscore-min.js" type="text/javascript"></script> -->
 
   <script type="text/javascript">
 
@@ -44,11 +44,13 @@
     function calc_the_evs() {
       var board = Array(9);
       for (var i = 0; i < 9; i++) {
-        var id = "#input" + i;
-        console.log(id);
-        var value = $(id).val();
+        var id = "#input" + i + " input";
+        var $id = $(id);
+        console.log($id);
+        var value = parseInt($id.val());
         board[i] = value;
       }
+      console.log(board);
 
       var unused = [];
       for (var i = 1; i < 10; i++) {
@@ -64,7 +66,7 @@
         });
 
         var enum_i = function() {
-          if (typeof(row[0]) !== "number") {
+          if (isNaN(row[0])) {
             _.each(unused, function(elem, idx) {
               enum_j(elem, _.reject(unused, function(num){ return num === elem; }));
             });
@@ -74,7 +76,7 @@
         }
 
         var enum_j = function(i, unused) {
-          if (typeof(row[1]) !== "number") {
+          if (isNaN(row[1])) {
             _.each(unused, function(elem, idx) {
               enum_k(i, elem, _.reject(unused, function(num){ return num === elem; }));
             });
@@ -84,7 +86,7 @@
         }
 
         var enum_k = function(i, j, unused) {
-          if (typeof(row[2]) !== "number") {
+          if (isNaN(row[2])) {
             _.each(unused, function(elem, idx) {
               possibilities.push(i + j + elem);
             });
@@ -100,8 +102,6 @@
           pointSum += payouts[elem];
         });
         var ev = Math.round(pointSum / possibilities.length);
-
-        console.log(key + " " + ev);
 
         $("#" + key + " div").html(ev);
       });      
